# probe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  probe-dev
.cargo/: config.toml
.github/workflows/: apple-fm-qwen-compare.yml  probe-ci.yml  probe-heavy-evals.yml
crates/probe-cli/: Cargo.toml
crates/probe-cli/src/: acceptance.rs  main.rs  overlay.rs
crates/probe-cli/tests/: binary_e2e.rs  cli_regressions.rs  forge_cli.rs  forge_rlm_cli.rs
crates/probe-cli/tests/snapshots/: binary_e2e__chat_process_resume.snap  binary_e2e__daemon_operator_commands.snap  binary_e2e__tui_smoke_report.snap  cli_regressions__accept_report.snap  cli_regressions__exec_stderr_summary.snap  cli_regressions__exec_transcript_event.snap
crates/probe-client/: Cargo.toml
crates/probe-client/src/: lib.rs
crates/probe-core/: Cargo.toml
crates/probe-core/src/: backend_profiles.rs  dataset_export.rs  forge_rlm.rs  forge_run_worker.rs  forge_worker.rs  harness.rs  issue_thread_analysis.rs  issue_thread_eval.rs  lib.rs  long_context.rs  paper_rlm.rs  provider.rs  runtime.rs  server_control.rs  session_store.rs  session_summary_artifacts.rs  tools.rs
crates/probe-core/tests/: policy_suite.rs  runtime_suite.rs  server_suite.rs  tool_suite.rs
crates/probe-daemon/: Cargo.toml
crates/probe-daemon/src/: main.rs
crates/probe-daemon/tests/: local_daemon.rs
crates/probe-decisions/: Cargo.toml
crates/probe-decisions/src/: lib.rs
crates/probe-openai-auth/: Cargo.toml
crates/probe-openai-auth/src/: lib.rs
crates/probe-optimizer/: Cargo.toml
crates/probe-optimizer/src/: lib.rs
crates/probe-protocol/: Cargo.toml
crates/probe-protocol/src/: backend.rs  lib.rs  runtime.rs  session.rs
crates/probe-provider-apple-fm/: Cargo.toml
crates/probe-provider-apple-fm/src/: lib.rs
crates/probe-provider-apple-fm/tests/: provider_suite.rs
crates/probe-provider-openai/: Cargo.toml
crates/probe-provider-openai/src/: lib.rs
crates/probe-provider-openai/tests/: provider_suite.rs
crates/probe-server/: Cargo.toml
crates/probe-server/src/: detached_events.rs  detached_registry.rs  detached_watchdog.rs  lib.rs  main.rs  server.rs  turn_control.rs  workspace_lifecycle.rs
crates/probe-server/tests/: stdio_protocol.rs
crates/probe-test-support/: Cargo.toml
crates/probe-test-support/src/: lib.rs
crates/probe-tui/: Cargo.toml
crates/probe-tui/src/: app.rs  bottom_pane.rs  event.rs  failure.rs  highlight.rs  lib.rs  memory.rs  message.rs  rich_text.rs  screens.rs  theme.rs  transcript.rs  widgets.rs  worker.rs
crates/probe-tui/tests/: hello_demo.rs  probe_tui.rs  runtime_suite.rs  ux_shakedown.rs
crates/probe-tui/tests/snapshots/: hello_demo__hello_demo_approval_overlay.snap  hello_demo__hello_demo_completed_state.snap  hello_demo__hello_demo_help_modal.snap  hello_demo__hello_demo_initial.snap  hello_demo__hello_demo_loading_state.snap  hello_demo__hello_demo_running_state.snap  hello_demo__hello_demo_setup_overlay.snap  hello_demo__hello_demo_transcript_committed_turn.snap  hello_demo__hello_demo_transcript_running_turn.snap  hello_demo__hello_demo_unavailable_state.snap  probe_tui__probe_tui_approval_overlay.snap  probe_tui__probe_tui_completed_state.snap  probe_tui__probe_tui_help_modal.snap  probe_tui__probe_tui_initial.snap  probe_tui__probe_tui_running_state.snap  probe_tui__probe_tui_setup_overlay.snap  probe_tui__probe_tui_transcript_committed_turn.snap  probe_tui__probe_tui_transcript_running_turn.snap  probe_tui__probe_tui_transcript_streaming_delta_turn.snap  probe_tui__probe_tui_transcript_streaming_snapshot_turn.snap  probe_tui__probe_tui_unavailable_state.snap
docs/: 01-psionic-qwen-hermes-deep-dive-and-probe-cli-roadmap.md  02-runtime-ownership-and-boundaries.md  03-workspace-map.md  04-session-turn-item-and-transcript-model.md  05-openai-compatible-provider-client.md  06-psionic-qwen35-backend-profile.md  07-probe-exec.md  08-interactive-cli-and-resume.md  09-tool-loop-and-local-tools.md  10-acceptance-harness.md  11-server-attach-and-launch.md  12-observability-and-cache-signals.md  13-harness-profiles.md  14-approval-classes-and-structured-tool-results.md  15-replay-and-decision-dataset-export.md  16-decision-modules.md  17-offline-optimizer.md  18-oracle-consultation.md  19-long-context-repo-analysis.md  20-testing-and-local-runner.md  21-cli-regression-and-snapshots.md  22-acceptance-report-schema.md  23-local-test-tiers.md  24-apple-fm-backend-lane.md  25-apple-fm-tool-lane.md  26-backend-receipts-and-usage-truth.md  27-apple-fm-qwen-comparison-suite.md  28-admitted-mac-comparison-runbook.md  28-admitted-mac-comparison-workflow.md  30-textual-inspired-rust-tui-shell.md  31-probe-tui-background-task-and-app-message-bridge.md  32-apple-fm-setup-demo-screen.md  32-apple-fm-setup-screen.md  35-probe-tui-retained-transcript-model.md  36-chat-screen-primary-shell-and-setup-secondary.md  37-probe-tui-bottom-pane-and-minimal-composer.md  38-probe-tui-transcript-turn-rendering.md  39-probe-tui-typed-overlay-stack-and-focus-routing.md  40-probe-tui-composer-history-commands-mentions-attachments-and-paste.md  42-probe-tui-real-runtime-session-worker.md  (+55 more)
npm/: package.json
npm/scripts/: README.md  build_npm_package.py  install_native_deps.py
scripts/: stage_npm_packages.py
scripts/deploy/forge-hosted/: 01-provision-baseline.sh  02-configure-and-start.sh  03-prepare-openagents-workspace.sh  04-open-tunnel.sh  common.sh
scripts/deploy/forge-worker/: 01-provision-baseline.sh  02-configure-and-start.sh  03-run-headless-codex-login.sh  04-open-logs.sh  05-refresh-attachment.sh  06-restart-service.sh  99-local-smoke.sh  common.sh  probe-forge-worker.env.example  probe-forge-worker.service  probe-forge-worker.sh
