[workspace]
members = [
    "crates/probe-cli",
    "crates/probe-core",
    "crates/probe-decisions",
    "crates/probe-optimizer",
    "crates/probe-protocol",
    "crates/probe-provider-openai",
    "crates/probe-test-support",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
probe-core = { path = "crates/probe-core" }
probe-decisions = { path = "crates/probe-decisions" }
probe-optimizer = { path = "crates/probe-optimizer" }
probe-protocol = { path = "crates/probe-protocol" }
probe-provider-openai = { path = "crates/probe-provider-openai" }
probe-test-support = { path = "crates/probe-test-support" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
wait-timeout = "0.2"
