[workspace]
members = [
    "crates/probe-cli",
    "crates/probe-core",
    "crates/probe-decisions",
    "crates/probe-optimizer",
    "crates/probe-protocol",
    "crates/probe-provider-apple-fm",
    "crates/probe-provider-openai",
    "crates/probe-test-support",
    "crates/probe-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
insta = { version = "1.43", features = ["json"] }
predicates = "3.1"
probe-core = { path = "crates/probe-core" }
probe-decisions = { path = "crates/probe-decisions" }
probe-optimizer = { path = "crates/probe-optimizer" }
probe-protocol = { path = "crates/probe-protocol" }
probe-provider-apple-fm = { path = "crates/probe-provider-apple-fm" }
probe-provider-openai = { path = "crates/probe-provider-openai" }
probe-test-support = { path = "crates/probe-test-support" }
probe-tui = { path = "crates/probe-tui" }
psionic-apple-fm = { git = "https://github.com/OpenAgentsInc/psionic.git", rev = "73e5025a3da04673331141ed33fda91a69cfbc0a", package = "psionic-apple-fm" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
wait-timeout = "0.2"
