[workspace]
members = [
    "crates/probe-daemon",
    "crates/probe-client",
    "crates/probe-cli",
    "crates/probe-core",
    "crates/probe-server",
    "crates/probe-decisions",
    "crates/probe-optimizer",
    "crates/probe-openai-auth",
    "crates/probe-protocol",
    "crates/probe-provider-apple-fm",
    "crates/probe-provider-openai",
    "crates/probe-test-support",
    "crates/probe-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.31"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
assert_cmd = "2.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
hex = "0.4"
insta = { version = "1.43", features = ["json"] }
predicates = "3.1"
pulldown-cmark = "0.10"
probe-client = { path = "crates/probe-client" }
probe-core = { path = "crates/probe-core" }
probe-daemon = { path = "crates/probe-daemon" }
probe-decisions = { path = "crates/probe-decisions" }
probe-optimizer = { path = "crates/probe-optimizer" }
probe-openai-auth = { path = "crates/probe-openai-auth" }
probe-protocol = { path = "crates/probe-protocol" }
probe-server = { path = "crates/probe-server" }
probe-provider-apple-fm = { path = "crates/probe-provider-apple-fm" }
probe-provider-openai = { path = "crates/probe-provider-openai" }
probe-test-support = { path = "crates/probe-test-support" }
probe-tui = { path = "crates/probe-tui" }
psionic-apple-fm = { git = "https://github.com/OpenAgentsInc/psionic.git", rev = "73e5025a3da04673331141ed33fda91a69cfbc0a", package = "psionic-apple-fm" }
psionic-optimize = { git = "https://github.com/OpenAgentsInc/psionic.git", rev = "6f245fb64844d12bf4e277440e1d3cd2053d2e30", package = "psionic-optimize" }
rand = { version = "0.8", features = ["std"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syntect = "5"
tempfile = "3.15"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = "0.1"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
wait-timeout = "0.2"
