[package]
name = "probe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
probe-core.workspace = true
probe-decisions.workspace = true
probe-optimizer.workspace = true
probe-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
