[package]
name = "probe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
probe-client.workspace = true
probe-core.workspace = true
probe-decisions.workspace = true
probe-optimizer.workspace = true
probe-openai-auth.workspace = true
probe-protocol.workspace = true
probe-server.workspace = true
probe-tui.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
probe-test-support.workspace = true
tempfile.workspace = true
