[package]
name = "probe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
crossterm.workspace = true
pollster = "0.4"
probe-client.workspace = true
probe-core.workspace = true
probe-decisions.workspace = true
probe-optimizer.workspace = true
probe-openai-auth.workspace = true
probe-protocol.workspace = true
probe-server.workspace = true
probe-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
wgpu = "24.0"
wgpui = { git = "https://github.com/OpenAgentsInc/openagents.git", rev = "5317af607bc323dd5de62cc3f25266d37bedd644", package = "wgpui" }
winit = "0.30"

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
probe-test-support.workspace = true
tempfile.workspace = true
