[package]
name = "probe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probe-protocol.workspace = true
probe-provider-openai.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true
