[package]
name = "probe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
probe-protocol.workspace = true
probe-provider-apple-fm.workspace = true
probe-provider-openai.workspace = true
psionic-apple-fm.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
probe-test-support.workspace = true
tempfile.workspace = true
