[package]
name = "probe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-eval.workspace = true
forge-policy.workspace = true
forge-rlm-core.workspace = true
forge-runtime-protocol.workspace = true
forge-signatures.workspace = true
hex.workspace = true
probe-protocol.workspace = true
probe-provider-apple-fm.workspace = true
probe-provider-openai.workspace = true
probe-openai-auth.workspace = true
psionic-apple-fm.workspace = true
reqwest.workspace = true
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
probe-test-support.workspace = true
tempfile.workspace = true
