[package]
name = "probe-openai-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
probe-test-support.workspace = true
tempfile.workspace = true
