[package]
name = "probe-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
probe-core.workspace = true
probe-decisions.workspace = true
psionic-optimize.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
