[package]
name = "probe-provider-apple-fm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probe-protocol.workspace = true
psionic-apple-fm.workspace = true
reqwest.workspace = true

[dev-dependencies]
probe-test-support.workspace = true
serde_json.workspace = true
