[package]
name = "probe-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probe-core.workspace = true
probe-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
probe-test-support.workspace = true
tempfile.workspace = true
