[package]
name = "probe-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
probe-client.workspace = true
probe-core.workspace = true
probe-decisions.workspace = true
probe-openai-auth.workspace = true
probe-protocol.workspace = true
probe-provider-apple-fm.workspace = true
psionic-apple-fm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
two-face.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
base64.workspace = true
insta.workspace = true
probe-test-support.workspace = true
tempfile.workspace = true
